# alleyhoop_ros

./: README.md
master/alleyhoop_master/: CMakeLists.txt  package.xml  rosdoc.yaml
master/alleyhoop_master/doc/: mainpage.md  manifest.yaml
master/alleyhoop_master/doc/html/: actuator_8h.html  actuator_8h__dep__incl.map  actuator_8h__dep__incl.md5  actuator_8h__incl.map  actuator_8h__incl.md5  actuator_8h_source.html  annotated.html  classAlleyHoopMVC_1_1Actuator-members.html  classAlleyHoopMVC_1_1Actuator.html  classAlleyHoopMVC_1_1Controller-members.html  classAlleyHoopMVC_1_1Controller.html  classAlleyHoopMVC_1_1Model-members.html  classAlleyHoopMVC_1_1Model.html  classAlleyHoopMVC_1_1Sensor-members.html  classAlleyHoopMVC_1_1Sensor.html  classAlleyHoopMVC_1_1Vehicle-members.html  classAlleyHoopMVC_1_1Vehicle.html  classes.html  controller_8h.html  controller_8h__incl.map  controller_8h__incl.md5  controller_8h_source.html  dir_0aba2d22dd5d90f54a21d12a344e309e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index-msg.html  index.html  mainpage_8md.html  mainpage_8md_source.html  md_doc_mainpage.html  model_8h.html  model_8h_source.html  namespaceAlleyHoopMVC.html  namespaces.html  pages.html  sensor_8h.html  (+10 more)
master/alleyhoop_master/include/: alleyhoop_controller.h  controller.h
master/alleyhoop_master/include/alleyhoop_master/: alleyhoop_controller.h  alleyhoop_feature_finder.h  alleyhoop_vehicle.h  controller.h  model.h  vehicle.h
master/alleyhoop_master/include/alleyhoop_mvc/: actuator.h  controller.h  model.h  sensor.h  vehicle.h
master/alleyhoop_master/include/alleyhoop_ros/: alleyhoop_controller.h  alleyhoop_feature_finder.h  alleyhoop_ros_controller.h  alleyhoop_ros_feature_finder.h  alleyhoop_ros_sensor.h  alleyhoop_ros_vehicle.h
master/alleyhoop_master/include/alleyhoop_ros_actuators/: alleyhoop_ros_led.h  alleyhoop_ros_motor.h
master/alleyhoop_master/include/alleyhoop_ros_core/: alleyhoop_ros_controller.h  alleyhoop_ros_feature_finder.h  alleyhoop_ros_image_feature_finder.h  alleyhoop_ros_vehicle.h
master/alleyhoop_master/include/alleyhoop_ros_sensors/: alleyhoop_ros_lidar.h  alleyhoop_ros_mono_camera.h  alleyhoop_ros_ultrasonic_sensor.h  alleyhoop_ros_ultrasoon.h
master/alleyhoop_master/include/alleyhoop_ros_utils/: alleyhoop_ros_feature.h  alleyhoop_ros_math.h
master/alleyhoop_master/launch/: alleyhoop_master.launch
master/alleyhoop_master/src/: alleyhoop_controller.cpp  alleyhoop_feature_finder.cpp  alleyhoop_ros_controller.cpp  alleyhoop_ros_core.cpp  alleyhoop_ros_feature_finder.cpp  alleyhoop_ros_led.cpp  alleyhoop_ros_lidar.cpp  alleyhoop_ros_mono_camera.cpp  alleyhoop_ros_motor.cpp  alleyhoop_ros_node.cpp  alleyhoop_ros_ultrasoon.cpp  alleyhoop_ros_vehicle.cpp  alleyhoop_vehicle.cpp  core.cpp
master/alleyhoop_master/src/alleyhoop_ros_actuators/: alleyhoop_ros_motor.cpp
master/alleyhoop_master/src/alleyhoop_ros_core/: alleyhoop_ros_controller.cpp  alleyhoop_ros_feature_finder.cpp  alleyhoop_ros_image_feature_finder.cpp  alleyhoop_ros_vehicle.cpp
master/alleyhoop_master/src/alleyhoop_ros_sensors/: alleyhoop_ros_lidar.cpp  alleyhoop_ros_mono_camera.cpp  alleyhoop_ros_ultrasonic_sensor.cpp  alleyhoop_ros_ultrasoon.cpp
master/alleyhoop_master/src/alleyhoop_ros_utils/: alleyhoop_ros_feature.cpp
master/alleyhoop_ros_master/: CMakeLists.txt  package.xml
master/alleyhoop_ros_master/config/: alleyhoop_device_configuration.yaml
master/alleyhoop_ros_master/doc/: mainpage.md  manifest.yaml
master/alleyhoop_ros_master/doc/html/: alleyhoop__ros__controller_8cpp.html  alleyhoop__ros__controller_8cpp__incl.map  alleyhoop__ros__controller_8cpp__incl.md5  alleyhoop__ros__controller_8cpp_source.html  alleyhoop__ros__controller_8h.html  alleyhoop__ros__controller_8h__dep__incl.map  alleyhoop__ros__controller_8h__dep__incl.md5  alleyhoop__ros__controller_8h__incl.map  alleyhoop__ros__controller_8h__incl.md5  alleyhoop__ros__controller_8h_source.html  alleyhoop__ros__depth__camera_8cpp.html  alleyhoop__ros__depth__camera_8cpp__incl.map  alleyhoop__ros__depth__camera_8cpp__incl.md5  alleyhoop__ros__depth__camera_8cpp_source.html  alleyhoop__ros__depth__camera_8h.html  alleyhoop__ros__depth__camera_8h__dep__incl.map  alleyhoop__ros__depth__camera_8h__dep__incl.md5  alleyhoop__ros__depth__camera_8h__incl.map  alleyhoop__ros__depth__camera_8h__incl.md5  alleyhoop__ros__depth__camera_8h_source.html  alleyhoop__ros__feature_8cpp.html  alleyhoop__ros__feature_8cpp__incl.map  alleyhoop__ros__feature_8cpp__incl.md5  alleyhoop__ros__feature_8cpp_source.html  alleyhoop__ros__feature_8h.html  alleyhoop__ros__feature_8h__dep__incl.map  alleyhoop__ros__feature_8h__dep__incl.md5  alleyhoop__ros__feature_8h__incl.map  alleyhoop__ros__feature_8h__incl.md5  alleyhoop__ros__feature_8h_source.html  alleyhoop__ros__feature__finder_8cpp.html  alleyhoop__ros__feature__finder_8cpp__incl.map  alleyhoop__ros__feature__finder_8cpp__incl.md5  alleyhoop__ros__feature__finder_8cpp_source.html  alleyhoop__ros__feature__finder_8h.html  alleyhoop__ros__feature__finder_8h__dep__incl.map  alleyhoop__ros__feature__finder_8h__dep__incl.md5  (+232 more)
master/alleyhoop_ros_master/launch/: alleyhoop_master.launch
master/alleyhoop_ros_master/src/: alleyhoop_ros_node.cpp
master/alleyhoop_ros_msgs/: CMakeLists.txt  package.xml
master/alleyhoop_ros_msgs/srv/: FindFeaturesOnImage.srv
master/example_feature_finder/: CMakeLists.txt  package.xml
master/example_feature_finder/src/: feature_finder_server.cpp
master/road_feature_finder/: CMakeLists.txt  package.xml
master/road_feature_finder/scripts/: road_feature_finder.py
master/traffic_rules_feature_finder/: CMakeLists.txt  package.xml
master/traffic_rules_feature_finder/src/: feature_finder_server.cpp
monitor/opencv_test_pkg/: CMakeLists.txt  package.xml
monitor/opencv_test_pkg/src/: cv_test.cpp
slave/raspi_ros_slave/: CMakeLists.txt  package.xml
slave/raspi_ros_slave/launch/: sensors.launch
slave/raspi_ros_slave/scripts/: raspi_camera.py
(+129 files in other folders)
